# provenir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml  deploy.yml
crates/provenir-core/: Cargo.toml
crates/provenir-core/src/: c2pa.rs  hash.rs  lib.rs  signals.rs
extension/: package-lock.json  package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  content.ts
extension/public/: provenir_core_bg.wasm
extension/src/: types.ts
extension/src/components/: score-badge.ts
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts  schema.sql
worker/src/routes/: register.ts  score.ts
worker/src/scoring/: composite.ts
